tests/errors/block-without-fun/main.pa
# A block of statements needs `fun`; a bare `{` opens a record literal.
def main = { let x = 5  x }
